# brutus

./: README.md  pyproject.toml  t1.py
brutus/: __init__.py
notebooks/: BrutusExampleSimple.ipynb
