[tool.poetry]
name = "brutus"
version = "0.1.0"
description = ""
authors = ["Bojan Nikolic"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jax = "^0.2.8"
scipy = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
