[tool.poetry]
name = "brutus"
version = "0.1.0"
description = ""
authors = ["Bojan Nikolic"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
jax = "^0.2.8"
scipy = "^1.6.0"
jaxlib = "^0.1.59"
matplotlib = "^3.3.3"
tables = "^3.6.1"
nbstripout = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
